# Cloud-Final-Project

./: .gitignore  Dockerfile  pyproject.toml
api/: Dockerfile  generate_validation.py  pyproject.toml  validation_expected.json  validation_pieces.csv
api/src/: app.py  diagnose.py
api/tests/: test_diagnose.py
app/: streamlit_app.py
deploy/: deploy_sagemaker.py
models/: model_metadata.json  xgboost_bath_predictor.json
notebooks/: 00_explore_data.ipynb  01_bronze_to_silver.ipynb  02_silver_to_gold.ipynb  03_build_clean_dataset.ipynb  04_analyze_per_matrix.ipynb
solutions/: final_exam.md  repos.md
src/vaultech_analysis/: inference.py
